--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
   <html>
   <head>
     <meta charset="utf-8">
-    <title>Now you See Vee</title>
+    <title>Now my See Vee</title>
 
   </head>
   <body>
 
     <div id='root'></div>
-    <script src="./compiled.js">
+    <script src="./build/compiled.js">
     </script>
 
   </body>
