--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <body>
 
     <div id='root'></div>
-    <script src="./build/compiled.js">
+    <script src="./compiled.js">
     </script>
 
   </body>
